--- a/regex/.devcontainer/devcontainer.json
+++ b/regex/.devcontainer/devcontainer.json
@@ -3,7 +3,14 @@
 {
 	"name": "Regex NodeJS",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "brgilsonsp/node_18_ubuntu"
+	"image": "brgilsonsp/node_18_ubuntu",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"tomoki1207.pdf"
+			]
+		}
+	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
